--- a/Comments/server/package.json
+++ b/Comments/server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.0",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4"
