--- a/Comments/server/package.json
+++ b/Comments/server/package.json
@@ -17,6 +17,8 @@
     "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
