--- a/react-router-example1/package.json
+++ b/react-router-example1/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "testing",
+  "name": "react-router-example1",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-scripts": "2.0.5",
-    "redux": "^4.0.1"
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
