--- a/comments/server/package.json
+++ b/comments/server/package.json
@@ -17,6 +17,9 @@
     "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.9",
     "morgan": "^1.9.1",
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
