--- a/simple-form/package.json
+++ b/simple-form/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "store",
+  "name": "simple-form",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,7 @@
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3"
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
